<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <TextView android:id="@+id/cmdlabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clabel"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/cmd" android:imeOptions="actionNext" android:inputType="text"></EditText>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/namelabel" android:text="@string/aliaslabel"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/name" android:inputType="text" android:imeOptions="actionGo|actionDone"></EditText>
    <RadioGroup android:id="@+id/radioGroup1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radio0" android:checked="true" android:text="@string/brieflabel"></RadioButton>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radio1" android:text="@string/perslabel"></RadioButton>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radio2" android:text="@string/inputlabel"></RadioButton>
    </RadioGroup>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/helplabel" android:paddingBottom="10px" android:paddingLeft="10px" android:paddingRight="10px" android:text="@string/remlabel"></TextView>
    <Button android:id="@+id/addb" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/addbutton"></Button>
</LinearLayout>
