<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/row1">
        <LinearLayout android:layout_weight="1" android:orientation="vertical" android:id="@+id/linearLayout1" android:baselineAligned="true" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <TextView android:layout_weight="1" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/iplabel" android:text="@string/ip"></TextView>
            <EditText android:layout_weight="1" android:id="@+id/ip" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="192.168.1.1" android:imeOptions="actionNext" android:inputType="numberDecimal"></EditText>
        </LinearLayout>
        <LinearLayout android:layout_weight="0.5" android:orientation="vertical" android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/portlabel" android:text="@string/port"></TextView>
            <EditText android:id="@+id/port" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="23" android:imeOptions="actionNext" android:inputType="number"></EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/row2">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/userlabel" android:text="@string/user"></TextView>
        <EditText android:text="1234" android:layout_height="wrap_content" android:id="@+id/user" android:password="false" android:layout_width="match_parent" android:imeOptions="actionNext" android:inputType="text"></EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/row3">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/pwdlabel" android:text="@string/pwd"></TextView>
        <EditText android:layout_height="wrap_content" android:id="@+id/pwd" android:text="1234" android:password="true" android:layout_width="match_parent" android:imeOptions="actionDone" android:inputType="text"></EditText>
        <CheckBox android:layout_width="wrap_content" android:text="@string/remember" android:layout_height="wrap_content" android:id="@+id/rembox"></CheckBox>
    </LinearLayout>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/connectb" android:layout_marginTop="10px" android:text="@string/connectbutton"></Button>
</LinearLayout>
